Terminal Operations part 2 + Intermediate Operations.